Sculpt Mode: Combined mesh doesn't show in sculpt mode #75104

Closed
opened 2020-03-26 14:55:53 +01:00 by Angelos Axiotis · 16 comments

{F8428942}{F8428717}System Information
Operating system: Windows 10
Graphics card: Nvidia GTX 980 Ti

Blender Version
Broken: 2.83 Alpha, 188ccfb0dd, master, 2020-03-24
Worked: 2.82a

Short description of error
Combined mesh doesn't show in sculpt mode

Exact steps for others to reproduce the error
When you combine 2 meshes together, the 2nd one doesn't show in sculpt mode. It is visible however in edit mode and in object mode.Annotation 2020-03-26 155419.jpg

Annotation 2020-03-26 155449.jpg

{[F8428942](https://archive.blender.org/developer/F8428942/BugExample.blend)}{[F8428717](https://archive.blender.org/developer/F8428717/Annotation_2020-03-26_155321.jpg)}**System Information** Operating system: Windows 10 Graphics card: Nvidia GTX 980 Ti **Blender Version** Broken: 2.83 Alpha, 188ccfb0dd67, master, 2020-03-24 Worked: 2.82a **Short description of error** Combined mesh doesn't show in sculpt mode **Exact steps for others to reproduce the error** When you combine 2 meshes together, the 2nd one doesn't show in sculpt mode. It is visible however in edit mode and in object mode.![Annotation 2020-03-26 155419.jpg](https://archive.blender.org/developer/F8428720/Annotation_2020-03-26_155419.jpg) ![Annotation 2020-03-26 155449.jpg](https://archive.blender.org/developer/F8428723/Annotation_2020-03-26_155449.jpg)

Added subscriber: @angelo9888

Added subscriber: @angelo9888

#75525 was marked as duplicate of this issue

#75525 was marked as duplicate of this issue

#75372 was marked as duplicate of this issue

#75372 was marked as duplicate of this issue

#75175 was marked as duplicate of this issue

#75175 was marked as duplicate of this issue
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Please provide a simple blend file to help test the bug .

Please provide a simple blend file to help test the bug .

Bug example file.BugExample.blend

Bug example file.[BugExample.blend](https://archive.blender.org/developer/F8428946/BugExample.blend)
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Pablo Dobarro self-assigned this 2020-03-26 20:23:40 +01:00
Member

Added subscriber: @carlosmu

Added subscriber: @carlosmu

This issue was referenced by bf49bb354f

This issue was referenced by bf49bb354fca4ad96f8f3e6802ecf733b29ac3e3
Member

Added subscribers: @rlsl0422, @TheRedWaxPolice

Added subscribers: @rlsl0422, @TheRedWaxPolice

Added subscriber: @Debuk

Added subscriber: @Debuk

This problem of unsync meshstates between editmode/objectmode and sculptmode also happens in other cases. It's quite easy to reproduce by using the polygon editing addon polyquilt. It's 100 percent reproducable by using it. I also informed the addon developer about the problem, but I think the info might be placed better here.

Addon : https://github.com/sakana3/PolyQuilt

The addon can delete faces with longclicks and recreate them with drags from one edge to the opposite one.

The result is always a differing mesh of editmode and sculptmode. Holes get closed in editmode but seem to remain remain in sculptmode. ( But just if viewport shading "solid"i is used)

Animated gif:
polyquiltandsculptmode.gif

I hope that helps.

Edit: Using "Show All Face Sets" solves it.

This problem of unsync meshstates between editmode/objectmode and sculptmode also happens in other cases. It's quite easy to reproduce by using the polygon editing addon polyquilt. It's 100 percent reproducable by using it. I also informed the addon developer about the problem, but I think the info might be placed better here. Addon : https://github.com/sakana3/PolyQuilt The addon can delete faces with longclicks and recreate them with drags from one edge to the opposite one. The result is always a differing mesh of editmode and sculptmode. Holes get closed in editmode but seem to remain remain in sculptmode. ( But just if viewport shading "solid"i is used) Animated gif: ![polyquiltandsculptmode.gif](https://archive.blender.org/developer/F8453633/polyquiltandsculptmode.gif) I hope that helps. Edit: Using "Show All Face Sets" solves it.
Member

Added subscriber: @jamesponge

Added subscriber: @jamesponge
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75104
No description provided.